# my-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  SECURITY.md  my-skills.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: 2026-06-24-shared-agent-skills-setup-plan.md  2026-06-25-cross-agent-skill-registry-plan.md  2026-06-29-skill-catalog-and-sharing-ux-plan.md  2026-06-30-my-skills-open-source-roadmap.md  2026-07-01-default-skills-seed-design.md  2026-07-01-my-skills-skill-draft.md  2026-07-01-seed-implementation-spec.md  2026-07-03-code-quality-improvement-plan.md  2026-07-04-registry-root-reliability-and-docs-plan.md  2026-07-07-import-manifest-registration-plan.md  2026-07-09-cli-update-detection-and-command-plan.md  release-checklist.md
skills/cli-inventory/: SKILL.md
skills/cli-inventory/references/: inventory-schema.md  required-tools.md
skills/cli-inventory/scripts/: check_tools.py  scan_tools.py
skills/my-jira/: SKILL.md  config.example.json  config.json
skills/my-skills/: SKILL.md
skills/personal-profile/: SKILL.md
skills/personal-profile/references/: schema.md
skills/repo-analysis/: SKILL.md
skills/repo-analysis/references/: analysis-checklist.md
skills/shared-agent-operation/: SKILL.md
src/my_skills/: __init__.py  audit_commands.py  bootstrap_commands.py  catalog.py  checks.py  cli.py  cli_runtime.py  config.py  data.py  defaults.py  frontmatter.py  hashing.py  ignore.py  init_registry_commands.py  inspection_commands.py  install_commands.py  install_formatting.py  installer.py  manifest_edit.py  planner.py  registry_commands.py  security.py  sharing.py  sharing_formatting.py  sharing_models.py  state.py  update_apply.py  update_cli.py  update_commands.py  validation.py  write_confirmation.py
src/my_skills/audit/: __init__.py  analyzers.py  builtin_rules.yaml  bundle.py  commands.py  dataflow.py  formatting.py  gate.py  markdown.py  models.py  policy.py  static.py  structure.py
src/my_skills/hosts/: __init__.py  base.py  claude.py  codex.py  gemini.py  hermes.py
tests/: audit_helpers.py  conftest.py  test_audit.py  test_audit_static.py  test_characterization.py  test_cli.py  test_cli_bootstrap.py  test_cli_catalog.py  test_cli_import.py  test_cli_install.py  test_cli_runtime.py  test_config.py  test_data.py  test_defaults.py  test_doctor.py  test_frontmatter.py  test_hashing.py  test_hosts.py  test_import.py  test_init_registry.py  test_init_registry_git.py  test_installer.py  test_integration.py  test_isolation.py  test_link.py  test_manifest_edit.py  test_planner.py  test_public_hygiene.py  test_readme_onboarding.py  test_repo_skills_smoke.py  test_security.py  test_seed_e2e.py  test_seed_packaging.py  test_set_root.py  test_share.py  test_skill_docs.py  test_state.py  test_status.py  test_sync.py  test_update_commands.py  (+3 more)
tests/fixtures/abs-path-warning/: SKILL.md
tests/fixtures/bad-name/: SKILL.md
tests/fixtures/good-skill/: SKILL.md
tests/fixtures/malformed-frontmatter/: SKILL.md
tests/fixtures/missing-name/: SKILL.md
tests/fixtures/missing-reference/: SKILL.md
tests/fixtures/name-mismatch/: SKILL.md
tests/fixtures/no-frontmatter/: SKILL.md
tests/fixtures/secret-skill/: SKILL.md
tests/fixtures/unterminated-frontmatter/: SKILL.md
