[project]
name = "my-skills"
version = "0.1.0"
description = "Personal cross-agent Agent Skill registry: manage, validate, install and sync skills across Claude Code, Codex, Gemini CLI and Hermes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
my-skills = "my_skills.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_skills"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
