[project]
name = "my-skills"
version = "0.1.0"
description = "Personal cross-agent Agent Skill registry: manage, validate, install and sync skills across Claude Code, Codex, Gemini CLI and Hermes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
my-skills = "my_skills.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_skills"]

[tool.hatch.build.targets.wheel.force-include]
"skills/cli-inventory/SKILL.md" = "my_skills/_defaults/skills/cli-inventory/SKILL.md"
"skills/cli-inventory/references/inventory-schema.md" = "my_skills/_defaults/skills/cli-inventory/references/inventory-schema.md"
"skills/cli-inventory/scripts/scan_tools.py" = "my_skills/_defaults/skills/cli-inventory/scripts/scan_tools.py"
"skills/personal-profile/SKILL.md" = "my_skills/_defaults/skills/personal-profile/SKILL.md"
"skills/personal-profile/references/schema.md" = "my_skills/_defaults/skills/personal-profile/references/schema.md"
"skills/my-skills/SKILL.md" = "my_skills/_defaults/skills/my-skills/SKILL.md"
"skills/my-jira/SKILL.md" = "my_skills/_defaults/skills/my-jira/SKILL.md"
"skills/my-jira/config.example.json" = "my_skills/_defaults/skills/my-jira/config.example.json"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
